--- a/index.html
+++ b/index.html
@@ -24,79 +24,41 @@
                 mission?
             </p>
         </div>
-
+        <!-- Number to Match/ My Sum -->
         <div class="card">
             <div class="card-body">
                 <div class="d-flex p-2 bd-highlight">
-                    <span id="targetNo"></span>
-                </div>
-                <div class="d-flex p-2 bd-highlight">
-                    <span id="mySum"></span>
+                    <div id="spanDiv">
+                        <span id="targetNo"></span>
+                    </div>
+                    <div id="spanDiv">
+                        <span id="mySum"></span>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <div>
-            <div class="card">
-                <div class="card-body">
-                        <img src="assets/images/square-purple.svg  #svgView(viewBox(0,0,200,200)) " class=crystalImage id="purpleCrystal" alt="Purple Crystal">
-                        <img src="assets/images/square-orange.svg  #svgView(viewBox(0,0,200,200))" class=crystalImage id="orangeCrystal" alt="Orange Crystal">
-                        <img src="assets/images/square-pink.svg  #svgView(viewBox(0,0,200,200)) " class=crystalImage id="pinkCrystal" alt="Pink Crystal">
-                        <img src="assets/images/square-blue.svg  #svgView(viewBox(0,0,200,200)) " class=crystalImage id="blueCrystal" alt="Blue Crystal">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex p-2 bd-highlight">
+        <!-- Crystals -->
+        <div class="card" id="crystalsCard">
+            <div id="containCrystals">
+                <img src="assets/images/square-orange.svg" class=crystalImage id="orangeCrystal" alt="Orange Crystal">
+                <img src="assets/images/square-purple.svg" class=crystalImage id="purpleCrystal" alt="Purple Crystal">
+                <img src="assets/images/square-blue.svg" class=crystalImage id="blueCrystal" alt="Blue Crystal">
+                <img src="assets/images/square-pink.svg" class=crystalImage id="pinkCrystal" alt="Pink Crystal">
+        </div>
+    </div>
+        <!-- Wins/ Losses -->
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex p-2 bd-highlight">
+                    <div id="spanDiv">
                         <span id="winCount"></span>
                     </div>
-                    <div class="d-flex p-2 bd-highlight">
+                    <div id="spanDiv">
                         <span id="lossCount"></span>
                     </div>
                 </div>
             </div>
-            <!-- WIN/ LOSS MODAL (MAYBE)
-        <div class="modal" tabindex="-1" role="dialog" id="winModal">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Modal body text goes here.</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
         </div>
-
-        <div class="modal" tabindex="-1" role="dialog" id="lossModal">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Modal body text goes here.</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 </body>
 
 </html>
